tests/vendor/valid/function_calls/compound_assign_function_result.c
//expect 1
//tags: functions
int foo() {
    return 2;
}

int main() {
    int x = 3;
    x -= foo();
    return x;
}