tests/vendor/invalid/semantics/bitwise_op_function.c
//tags: functions
int x();

int main() {
    x >> 2;
    return 0;
}